# SID-eCos-with-Eclipse

./: README
arm-pid/: arm_pid.ecc
arm-pid/arm_pid_build/: makefile
arm-pid/arm_pid_install/: runsid
arm-pid/examples/: Make.params  hello
docs/: .~lock.HOW_TO.odt#  HOW_TO.odt
eclipse-workspace/example/: .cproject  .project  Make.params  Makefile  arm-pid7t.conf  example  example.c
eclipse-workspace/simple-alarm/: .cproject  .project  Makefile  arm-pid7t.conf  simple-alarm
eclipse-workspace/teclado/: .cproject  .project  Make.params  Makefile  arm-pid7t.conf  arm-pid7t.conf_backup18May  arm-pid7t2.conf  arm-pid7t2.conf~  hello.conf  keyboard.c  keyboard.h  kk  teclado  teclado.c  teclado.conf
hello/: .cproject  .project  CertETSIT.cer  hello  hello.conf  new_file.conf  salida  sid.conf
hello/codigo_cambiado/: sid.conf
hello/stdio_uart/: Make.params  Makefile  hello
sid-1.1/lib/: libopcodes.la
sid-1.1_source/: arm-pid7t.conf
sid-1.1_source/src/: Makefile  config.status  hello.conf
sid-1.1_source/src/sid/component/hexkeyboard/: Makefile  Makefile.am  Makefile.in  hexkeyboard.cxx~  hexkeyboard.h~  libhexkeyboard.la
sid-1.1_source/src/sid/component/hexkeyboard/.deps/: hexkeyboard.Plo
sid-1.1_source/src/sid/component/hexkeyboard/.libs/: libhexkeyboard.la  libhexkeyboard.lai  libhexkeyboard.so.0.0.0
sid-1.2/include/: bfd.h
sid-1.2/lib/: libopcodes.la  tclConfig.sh
sid-1.2_src/: HOWTO_RUN  HOWTO_RUN~
sid-1.2_src/sid-1.2/: HOWTO_COMPILE
sid-1.2_src/src/: Makefile  config.status  configure.out
sid/lib/: libbfd.la  tclConfig.sh  (+1 more)
(+1860 files in other folders)
